==> xingke-mo/Arduino-For-Keil/_Keilduino/Platform/AT32F4xx/Core/timer.c <==
#include "timer.h"

void Timer_ClockCmd(TIM_TypeDef* TIMx, FunctionalState NewState)
{
    if(TIMx == TIM1)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR1, NewState);
    }
    else if(TIMx == TIM2)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR2, NewState);
    }
    else if(TIMx == TIM3)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR3, NewState);
    }
    else if(TIMx == TIM4)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR4, NewState);
    }
    else if(TIMx == TIM5)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR5, NewState);
    }

#ifdef TMR12
    else if(TIMx == TIM6)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR6, NewState);
    }

#endif
#ifdef TMR7
    else if(TIMx == TIM7)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR7, NewState);
    }

#endif
    else if(TIMx == TIM8)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR8, NewState);
    }
    else if(TIMx == TIM9)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR9, NewState);
    }
    else if(TIMx == TIM10)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR10, NewState);
    }
    else if(TIMx == TIM11)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR11, NewState);
    }

#ifdef TMR12
    else if(TIMx == TIM12)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR12, NewState);
    }

#endif
#ifdef TMR13
    else if(TIMx == TIM13)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR13, NewState);
    }

#endif
#ifdef TMR14
    else if(TIMx == TIM14)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1PERIPH_TMR14, NewState);
    }

#endif
#ifdef TMR15
    else if(TIMx == TIM15)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_TMR15, NewState);
    }

#endif
}

void Timer_SetEnable(TIM_TypeDef* TIMx, bool Enable)
{
    TMR_Cmd(TIMx, Enable ? ENABLE : DISABLE);
}

void Timer_SetInterrupt(TIM_TypeDef* TIMx, uint32_t Time, Timer_CallbackFunction_t Function)
{
    uint16_t period = 0;
    uint16_t prescaler = 0;
    uint32_t clock = TIMER_GET_CLOCK_MAX(TIMx);

    if(!IS_TMR_ALL_PERIPH(TIMx) || Time == 0)
    {
        return;
    }

    /*将定时中断时间转换为重装值和时钟分频值*/
    Timer_TimeFactorization(
        Time,
        clock,
        &period,
        &prescaler
    );

    /*定时中断配置*/
    Timer_SetInterruptBase(
        TIMx,
        period,
        prescaler,
        Function,
        TIMER_PREEMPTIONPRIORITY_DEFAULT,
        TIMER_SUBPRIORITY_DEFAULT
    );
}

bool Timer_SetInterruptFreqUpdate(TIM_TypeDef* TIMx, uint32_t Freq)
{
    uint16_t period, prescaler;
    uint32_t clock = TIMER_GET_CLOCK_MAX(TIMx);
    int32_t error;

    if(!IS_TMR_ALL_PERIPH(TIMx) || Freq == 0)
    {
        return false;
    }

    bool success = Timer_FreqFactorization(
                       Freq,
                       clock,
                       &period,
                       &prescaler,
                       &error
                   );

    if(!success)
    {
        return false;
    }

    TMR_SetAutoreload(TIMx, period - 1);
    TMR_DIVConfig(TIMx, prescaler - 1, TMR_DIVReloadMode_Immediate);
    return true;
}

uint32_t Timer_GetClockOut(TIM_TypeDef* TIMx)
{
    uint32_t clock = TIMER_GET_CLOCK_MAX(TIMx);

    if(!IS_TMR_ALL_PERIPH(TIMx))
    {
        return 0;
    }

    return (clock / ((TIMx->AR + 1) * (TIMx->DIV + 1)));
}

void Timer_SetInterruptTimeUpdate(TIM_TypeDef* TIMx, uint32_t Time)
{
    uint16_t period, prescaler;
    uint32_t clock = TIMER_GET_CLOCK_MAX(TIMx);

    if(!IS_TMR_ALL_PERIPH(TIMx))
    {
        return;
    }

    Timer_TimeFactorization(
        Time,
        clock,
        &period,
        &prescaler
    );

    TMR_SetAutoreload(TIMx, period - 1);
    TMR_DIVConfig(TIMx, prescaler - 1, TMR_DIVReloadMode_Immediate);
}

void Timer_SetInterruptBase(
    TIM_TypeDef* TIMx,
    uint16_t Period,
    uint16_t Prescaler,
    Timer_CallbackFunction_t Function,
    uint8_t PreemptionPriority,
    uint8_t SubPriority
)
{
    TMR_TimerBaseInitType  TMR_TimeBaseStructure;
    NVIC_InitType NVIC_InitStructure;
    uint8_t TMRx_IRQn = 0;
    TIMER_Type TIMERx = TIMER1;

    if(!IS_TMR_ALL_PERIPH(TIMx))
    {
        return;
    }

#define TMRx_IRQ_DEF(n,x_IRQn)\
    do{\
        if(TIMx == TIM##n)\
        {\
            TIMERx = TIMER##n;\
            TMRx_IRQn = x_IRQn;\
            goto match;\
        }\
    }\
    while(0)

    /*如果编译器提示：identifier "xxx_IRQn" is undefined
     *把未定义的注释掉即可
     */
    TMRx_IRQ_DEF(1, TMR1_OV_TMR10_IRQn);
    TMRx_IRQ_DEF(2, TMR2_GLOBAL_IRQn);
    TMRx_IRQ_DEF(3, TMR3_GLOBAL_IRQn);
    TMRx_IRQ_DEF(4, TMR4_GLOBAL_IRQn);
    TMRx_IRQ_DEF(5, TMR5_GLOBAL_IRQn);

#ifdef TMR6
    TMRx_IRQ_DEF(6, TMR6_GLOBAL_IRQn);
#endif

#ifdef TMR7
    TMRx_IRQ_DEF(7, TMR7_GLOBAL_IRQn);
#endif

    TMRx_IRQ_DEF(8, TMR8_OV_TMR13_IRQn);
    TMRx_IRQ_DEF(9, TMR1_BRK_TMR9_IRQn);
    TMRx_IRQ_DEF(10, TMR1_OV_TMR10_IRQn);

#ifdef TMR11
    TMRx_IRQ_DEF(11, TMR1_TRG_COM_TMR11_IRQn);
#endif

#ifdef TMR12
    TMRx_IRQ_DEF(12, TMR8_BRK_TMR12_IRQn);
#endif

#ifdef TMR13
    TMRx_IRQ_DEF(13, TMR8_OV_TMR13_IRQn);
#endif

#ifdef TMR14
    TMRx_IRQ_DEF(14, TMR8_TRG_COM_TMR14_IRQn);
#endif

#ifdef TMR15
    TMRx_IRQ_DEF(15, TMR15_OV_IRQn);
#endif

match:

    if(TMRx_IRQn == 0)
    {
        return;
    }

    Timer_CallbackFunction[TIMERx] = Function;

    TMR_Reset(TIMx);
    Timer_ClockCmd(TIMx, ENABLE);

    TMR_TimeBaseStructInit(&TMR_TimeBaseStructure);
    TMR_TimeBaseStructure.TMR_RepetitionCounter = 0;
    TMR_TimeBaseStructure.TMR_Period = Period - 1;
    TMR_TimeBaseStructure.TMR_DIV = Prescaler - 1;
    TMR_TimeBaseStructure.TMR_ClockDivision = TMR_CKD_DIV1;
    TMR_TimeBaseStructure.TMR_CounterMode = TMR_CounterDIR_Up;
    TMR_TimeBaseInit(TIMx, &TMR_TimeBaseStructure);

    NVIC_InitStructure.NVIC_IRQChannel = TMRx_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = PreemptionPriority;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = SubPriority;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    TMR_ClearFlag(TIMx, TMR_FLAG_Update);
    TMR_INTConfig(TIMx, TMR_INT_Overflow, ENABLE);
}

void Timer_SetCompare(TIM_TypeDef* TIMx, uint8_t TimerChannel, uint32_t Compare)
{
    switch(TimerChannel)
    {
    case 1:
        TMR_SetCompare1(TIMx, Compare);
        break;

    case 2:
        TMR_SetCompare2(TIMx, Compare);
        break;

    case 3:
        TMR_SetCompare3(TIMx, Compare);
        break;

    case 4:
        TMR_SetCompare4(TIMx, Compare);
        break;

    default:
        break;
    }
}

uint16_t Timer_GetCompare(TIM_TypeDef* TIMx, uint8_t TimerChannel)
{
    uint16_t compare = 0;

    switch(TimerChannel)
    {
    case 1:
        compare = TMR_GetCapture1(TIMx);
        break;

    case 2:
        compare = TMR_GetCapture2(TIMx);
        break;

    case 3:
        compare = TMR_GetCapture3(TIMx);
        break;

    case 4:
        compare = TMR_GetCapture4(TIMx);
        break;

    default:
        break;
    }

    return compare;
}

void Timer_GenerateUpdate(TIM_TypeDef* TIMx)
{
    TIMx->EVEG = TMR_DIVReloadMode_Immediate;
}
